<resources>
    <string name="app_name">StuLance</string>
    <string name="ikonName">freelance</string>
    <string name="textStart">     If you are a student and want to make money, start now!</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="girisButon">Öğrenci Olarak Giriş Yap!</string>
    <string name="girisButon2">İşveren Olarak Giriş Yap!</string>
    <string name="StuLoginName">Username</string>
    <string name="btnStuLogin">Login!</string>
    <string name="tvLogin">Create an Account!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="click">Create An Account!</string>
    <string name="Password">Password</string>
    <string name="ButtonLogin">Login!</string>
    <string name="create">ButtonCreate</string>
    <string name="title_activity_drawer_menu">drawer_menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
</resources>
